    - 0620_nxcompext_use-correct-library-naming-scheme-on-OS-X.full.patch
    - 0621_nxcompshad_use-correct-library-naming-scheme-on-OS-X.full.patch
  * nx-X11: handle source pictures (those without a Drawable surface)
    gracefully.
    Adds:
    - 0017_nx-X11_fix-SetPictureFilter.full.patch
  * nx-X11: fix typo in previous patch.
    Affects:
    - 0017_nx-X11_fix-SetPictureFilter.full.patch

 -- X2Go Release Manager <git-admin@x2go.org>  Tue, 17 Mar 2015 19:19:32 +0100

nx-libs (2:3.5.0.31-0x2go1) unstable; urgency=low

  [ Clemens Lang ]
  * Use path discovery for finding makedepend. Remove old cruft. Adds:
    - 0070_nxcomp_use-MAKEDEPEND-in-path.full+lite.patch
    - 0071_nxcompext_use-MAKEDEPEND-in-path.full+lite.patch
    - 0072_nxcompshad_use-MAKEDEPEND-in-path.full+lite.patch
    - 0073_nxproxy_use-MAKEDEPEND-in-path.full+lite.patch
  * Fix dynamic library linking on OS X. Use -dynamiclib instead of -bundle.
    Adds:
    - 0074_nxcomp_use-dynamiclib-flag-on-OS-X.full+lite.patch
    - 0075_nxcompshad_use-dynamiclib-flag-on-OS-X.full+lite.patch
  * Use the correct library naming scheme on OS X. It differs from other
    UNIX-based systems.
    Adds:
    - 0410_nxcomp_use-correct-library-naming-scheme-on-OS-X.full+lite.patch
    - 0610_nxcompext_use-correct-library-naming-scheme-on-OS-X.full+lite.patch
    - 0611_nxcompshad_use-correct-library-naming-scheme-on-OS-X.full+lite.patch

  [ Mihai Moldovan ]
  * nx{comp{,ext,shad},proxy}: try really hard to find makedepend. Do not fail
    if it is not available.
  * Rename:
    - 0070_nxcomp_use-MAKEDEPEND-in-path.full+lite.patch =>
      0410_nxcomp_use-MAKEDEPEND-in-path.full+lite.patch
    - 0071_nxcompext_use-MAKEDEPEND-in-path.full+lite.patch =>
      0610_nxcompext_use-MAKEDEPEND-in-path.full+lite.patch
    - 0072_nxcompshad_use-MAKEDEPEND-in-path.full+lite.patch =>
      0611_nxcompshad_use-MAKEDEPEND-in-path.full+lite.patch
    - 0073_nxproxy_use-MAKEDEPEND-in-path.full+lite.patch =>