@@ -26,6 +26,9 @@ nx-libs (2:3.5.0.32-0x2go1) UNRELEASED; urgency=low
   * nx-X11: fix typo in previous patch.
     Affects:
     - 0017_nx-X11_fix-SetPictureFilter.full.patch
+  * nx-X11: add more NULL guards to TEST and DEBUG sections of Render.c.
+    Affects:
+    - 0990_fix-DEBUG-and-TEST-builds.full.patch
 
  -- X2Go Release Manager <git-admin@x2go.org>  Tue, 17 Mar 2015 19:19:32 +0100
 
